--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <canvas id="canvas"></canvas>
 </body>
-<script src="../node_modules/three/build/three.min.js"></script>
+<!-- <script src="../node_modules/three/build/three.min.js"></script> -->
 <script type="module" src="script.js"></script>
 </html>
